Fix overflow issue on mobile product detail page

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -7,6 +7,7 @@
 
   @media screen and (max-width: $break-medium)
     display: grid
+    grid-template-columns: minmax(0, 1fr)
     row-gap: 24px
 
   .product-images
